# aoc-2022

./: Cargo.toml
resources/: input.txt
src/: data.rs  main.rs
