[package]
name = "advent-of-code-2021"
version = "0.2.0"
authors = ["Mathieu Chauvin <mathieu.chauvin@orange.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1"
itertools = "0.10"

[profile.release]
lto = true
codegen-units = 1
